# connection_app

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY.md  README.md  RESEARCH-AWS-TOOLS-INTEGRATION.md  SECURITY.md  THIRD_PARTY_LICENSES.md  biome.json  configLoader.js  connect.js  envPortMapping.js  gui-adapter.js  index.html  latest.json  package-lock.json  package.json  vite.config.js
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml  update-homebrew.yml
scripts/: download-ssm-plugin.js  generate-icons.js  generate-signing-key.sh  generate-update-json.js  pkg-sidecar-dev.js  pkg-sidecar.js
src/: App.svelte  app.css  aws-clients.js  aws-operations.js  credential-resolver.js  main.js  plugin-resolver.js  sso-login.js
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  error.rs  history.rs  lib.rs  main.rs  sandbox.rs  tray.rs
src-tauri/src/aws/: credentials.rs  iam_auth.rs  mod.rs  operations.rs  sso.rs
src-tauri/src/commands/: connection.rs  mod.rs  profiles.rs  projects.rs  saved.rs  system.rs  tray.rs
src-tauri/src/config/: aws_config.rs  mod.rs  preferences.rs  projects.rs  validation.rs
src-tauri/src/tunnel/: manager.rs  mod.rs  native.rs  protocol.rs  smux.rs  websocket.rs
src/lib/: ActiveConnections.svelte  AmbientBackground.svelte  ConfirmDialog.svelte  ConnectionForm.svelte  CopyButton.svelte  CredentialsDisplay.svelte  PrerequisitesCheck.svelte  SavedConnections.svelte  SessionStatus.svelte  Settings.svelte  ThemeSwitcher.svelte  UpdateBanner.svelte  themes.js  utils.js
test/: aws-operations.test.js  configLoader.test.js  connect.test.js  credential-resolver.test.js  plugin-resolver.test.js  sso-login.test.js
tests/: e2e-vnc-tunnel.sh
ui/: index.html  scripts.js  styles.css
