[package]
name = "connection-app"
version = "3.5.0"
description = "Secure tunneling through AWS SSM"
authors = ["Iaroslav Pyrogov"]
edition = "2024"
default-run = "connection-app"
license = "MIT"
repository = "https://github.com/yarka-guru/connection_app"
homepage = "https://github.com/yarka-guru/connection_app"
keywords = ["aws", "rds", "ssm", "tunnel", "tauri"]

[lib]
name = "connection_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "connection-app"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "connection-app-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "fs", "rt", "rt-multi-thread", "net", "time", "process", "macros", "signal"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", features = ["json"] }
semver = "1"
aws-config = { version = "1", features = ["sso"] }
aws-sdk-sts = "1"
aws-sdk-ec2 = "1"
aws-sdk-rds = "1"
aws-sdk-ssm = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-ecs = "1"
aws-sdk-ssooidc = "1"
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
aws-sigv4 = "1"
aws-credential-types = "1"
dirs = "6"
sha1 = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
log = "0.4"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
sha2 = "0.10"
byteorder = "1"
futures-util = "0.3"
base64 = "0.22"
socket2 = "0.6"
env_logger = "0.11"

[features]
default = ["gui"]
gui = ["tauri", "tauri-build", "tauri-plugin-store", "tauri-plugin-opener", "tauri-plugin-updater", "tauri-plugin-dialog", "tauri-plugin-notification", "custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
